# cfg3d

./: genAllRules.sh  install_boost_geometry.sh  startKinect.sh  stopKinect.sh
GraphSegmentationAbhishek/src/: segment_pcl.cpp
cfg3d/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  segmentAll.sh
cfg3d/cfg/: labeler.cfg  labelviewer.cfg
cfg3d/include/: OccupancyMap.h  color.cpp  color.h  point_types.h  utils.h  wallDistance.h
cfg3d/rules/: delRules.sh  nohup.out  printer.color  removeColorFeats.sh  rule_10pillarLeft__5Plane  rule_10pillarLeft__5Plane.model  rule_10printerTop__5Plane  rule_10printerTop__5Plane.model  rule_10printerTop__5Plane.out  rule_11dustbinWide__5Plane  rule_11pillarRight__5Plane  rule_11pillarRight__5Plane.model  rule_11printerSide__5Plane  rule_11printerSide__5Plane.model  rule_11printerSide__5Plane.out  rule_11printerTray__5Plane  rule_11tableDrawer__5Plane  rule_11tableDrawer__5Plane.model  rule_12chairArmRest__5Plane  rule_12chairArmRest__5Plane.model  rule_12cupboardSide__5Plane  rule_12keyboardTray__5Plane  rule_12keyboardTray__5Plane.model  rule_12printerFront__5Plane  rule_12printerFront__5Plane.model  rule_12printerFront__5Plane.out  rule_12sofaBackRest__5Plane  rule_12sofaBackRest__5Plane.model  rule_13chairBackRest__5Plane  rule_13chairBackRest__5Plane.model  rule_13cupboardFront__5Plane  rule_13dustbinNarrow__5Plane  rule_14SupportComplexI3CPUE__14SupportComplexI3CPUE_5paper  rule_14SupportComplexI3CPUE__14SupportComplexI3CPUE_5paper.model  rule_14SupportComplexI5FloorE__14SupportComplexI5FloorE_14SupportComplexI5TableE  rule_14SupportComplexI5FloorE__14SupportComplexI5FloorE_14SupportComplexI5TableE.model  rule_14SupportComplexI5FloorE__14SupportComplexI5FloorE_3CPU  rule_14SupportComplexI5FloorE__14SupportComplexI5FloorE_3CPU.model  rule_14SupportComplexI5FloorE__14SupportComplexI5FloorE_4Wall  rule_14SupportComplexI5FloorE__14SupportComplexI5FloorE_4Wall.model  (+382 more)
cfg3d/src/: CPU_generatedDataStructures.cpp  CPU_generatedLearner.cpp  ColorMapTableModel.cpp  ColorMapTableModel.h  HOG.cpp  HOG.h  Laptop_generatedDataStructures.cpp  Laptop_generatedLearner.cpp  Monitor_generatedDataStructures.cpp  Monitor_generatedLearner.cpp  PTNodeTableModel.cpp  PTNodeTableModel.h  ParseTreeLabler.cpp  ParseTreeLablerForm.cpp  ParseTreeLablerForm.h  ParseTreeLablerForm.ui  Printer_generatedDataStructures.cpp  Printer_generatedLearner.cpp  Rules_Floor.h  Rules_Wall.h  Wall_Learner.cpp  aggregatePR.m  cfg3D.cpp  disjoint-set.h  dotToRules.py  evaluation.py  extract_objects.cpp  extract_planes.cpp  featGenGen.cpp  featuresGenerator.cpp  gaussianProb.m  genAllRulesDist.m  genAllRulesDistScript.m  generateDistributionParameters.m  generatedDataStructures.cpp  generatedDataStructures.h  getLabelmapMajorityVoting.cpp  helper.cpp  invert.py  labelVisualizer.cpp  (+32 more)
cfg3d/src/manualBackups/: cfg3D.cpp  helper.cpp  structures.cpp
cfg3d/src/svm_light/: svm_classify.cpp  svm_common.cpp  svm_common.h  svm_learn.cpp  svm_learn_main.cpp
cfg3d/src/svm_struct/: svm_struct_classify.cpp  svm_struct_learn.cpp  svm_struct_main.cpp
doc/: presentation_SceneUnderstanding.tex  references.bib  report.tex
doc/funding/: full.dia
obj2pcd/: mesh2pc.m  meshall.m  pcdwrite.m  read_wobj.m  trimesh2pc.m  unitspace.m
tutorial/: CMakeLists.txt  mainpage.dox  manifest.xml
tutorial/src/: 04_seg_sample_1.cpp  04_seg_sample_2.cpp  04_seg_sample_3.cpp  04_seg_sample_4.cpp  (+2 more)
